
	* calculus.man:	 		Added Romberg integration to
	* romberg.man:			the library.  The procedures should
	* calculus.tcl (romberg*):	provide a "production quality"
	* calculus.test (romberg-*):	library for integrating functions
	* math.tcl:			of one variable, including functions
	* misc.tcl (expectInteger):	that have integrable singularities
					and integrals over half-infinite
					intervals.
	
2004-06-19  Kevin Kenny  <kennykb@acm.org>

	* interpolate.man:  Added polynomial interpolation with Neville's
	* interpolate.tcl:  algorithm; this procedure will be needed in
	* interpolate.test: Romberg integration, which is the next project.
	
2004-06-18  Kevin Kenny  <kennykb@acm.org>

	* bessel.test:        Fixed several problems that were causing tests
	* combinatorics.test: to fail or to run noisily. Corrected inconsistent
	* interpolate.tcl:    package version number in interpolate.tcl.
	* interpolate.test:
	* qcomplex.test:

	* optimize.man:   Added min_bound_1d and min_unbound_1d functions
	* optimize.tcl:   to do one-dimensional function minimization,
	* optimize.test:  constrained and unconstrained, respectively,
	                  without derivatives.
	
2004-06-16  Andreas Kupries  <andreask@activestate.com>

	* interpolate.man: Added a missing list_end before section
	  examples. Fixed usage of braces in the example as well.

2004-06-16  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* added the modules complexnumbers, special, interpolate, constants

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	*


2004-02-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* combinatorics.tcl (::math::factorial): correct fac 171
	off-by-one and use of -strict in string is int|double.

2003-12-22  Joe English  <jenglish@users.sourceforge.net>
	* calculus.man (rungeKuttaStep): Add missing argument
	in function synopsis (bug report from Richard Body).
